--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="agent_description">The inventory agent running in background</string>
     <string name="button_start_inventory">Start Inventory</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_clearlog">Clear Log</string>
+    <string name="menu_send">Send</string>
+    <string name="menu_getinv">Get Inventory</string>
     <string name="all_permissions">Grant all possible permissions</string>
     <string name="agent_connected">Connected to Agent Service</string>
     <string name="agent_disconnected">Disconnected from Agent Service</string>
@@ -13,4 +16,9 @@
     <string name="inventory_ended">End of inventory.</string>
     <string name="button_connect_agent">Connect Agent</string>
     <string name="button_disconnect_agent">Disconnect Agent</string>
+    <string name="service_notif_id">FusionInventory Agent</string>
+    <string-array name="agent_status">
+    	<item>Agent is waiting an order ...</item>
+    	<item>Agent is performing an inventory ...</item>
+    </string-array> 
 </resources>
