--- a/README
+++ b/README
@@ -1,15 +1,15 @@
-This application is the Android inventory agent of the FusionInventory project.
+This application is the Android inventory agent of the Inventory project.
 
 It features a complete inventory of your Android devices: both hardware and software informations are collected. You get the data about processor, memory, drives, sensors, etc. and also the list and description of installed application (apk).
 
-FusionInventory Agent for Android is running on Android 1.6 and higher.
+Inventory Agent for Android is running on Android 1.6 and higher.
 
-FusionInventory Agent for Android can send inventory to:
-- FusionInventory for GLPI 2.3.x and higher
+Inventory Agent for Android can send inventory to:
+- Inventory for GLPI 2.3.x and higher
 - OCSInventory NG (ocsng) 1.3.x and 2.x
 - Mandriva Pulse2
 
-The FusionInventory project is an open source project providing :
+The Inventory project is an open source project providing :
 - hardware and software inventory (multiplatform)
 - network discovery
 - network inventory for printers and switchs
@@ -17,6 +17,6 @@ The FusionInventory project is an open source project providing :
 - Software deployment
 - total integration with the GLPI project (open source asset management software and helpdesk)
 
-FusionInventory agents can also be used with other open sources projects like Uranos or Rudder.
+Inventory agents can also be used with other open sources projects like Uranos or Rudder.
 
 The agent is a FreeSoftware under GPLv2+ license.
