docs(release): add paragraph and header

--- a/_posts/2017-09-22-september-2017.md
+++ b/_posts/2017-09-22-september-2017.md
@@ -5,8 +5,27 @@ published: true
 title: September 2017
 ---
 # September 2017 (version 1.0)
-Hello World
 
-## Header
+Welcome to the first release of Flyve MDM Android Inventory Agent!
+
+We are glad and very proud to present you this brand new application that features a complete inventory of your Android devices where both the hardware and software informations are collected with just a touch.
+
+
+	- How it works - Get all the important data easy and simple
+	- Documentation - Every aspect of the code explained
+    - Contibutions - We are on GitHub!
+	- Installation - Playstore and F-Droid
+
+
+## How it works
+
+The application allows you to run the inventory from the start, always and when the inventory is enabled.
+
+
+
+Automatize your inventory generation in the Inventory Parameters, there you can set the frequency in which it will be created
+
+
+
 
 
