docs(release): change the paragraph

--- a/_posts/2017-09-22-september-2017.md
+++ b/_posts/2017-09-22-september-2017.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 category: blog
-published: true
+published: false
 title: September 2017
 ---
 # September 2017 (version 1.0)
 
-Welcome to the first release of Flyve MDM Android Inventory Agent!
+Welcome to the first release of Flyve MDM Android Inventory Agent.
 
 We are glad and very proud to present you this brand new application that features a complete inventory of your Android devices where both the hardware and software informations are collected with just a touch.
 
