--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 	<string name="agent_reboot">Inventory Agent is restarted</string>
 	<string name="agent_description">Agent is running in background</string>
 	<string name="button_start_inventory">Start Inventory</string>
+	<string name="menu_about">About</string>
 	<string name="menu_settings">Settings</string>
 	<string name="menu_clearlog">Clear Log</string>
 	<string name="menu_send">Send</string>
