docs(jekyll): add social buttons into the posts
add button of Reddit
add button of Hacker News

--- a/_posts/2017-09-22-september-2017.md
+++ b/_posts/2017-09-22-september-2017.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 category: blog
-published: false
+redditURL: ""
+published: true
 title: September 2017
 ---
-# September 2017 (version 1.0)
 
 Welcome to the first release of Flyve MDM Android Inventory Agent.
 
