--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
 	<string name="login">Login</string>
 	<string name="password">Password</string>
 	<string name="tag">Tag</string>
+	<string name="tagSummary">Custom asset tag</string>
 	<string name="week">Week</string>
 	<string-array name="Time">
 		<item>day</item>
@@ -68,12 +69,12 @@
 	<!-- Inventory part -->
 
 	<string name="AccueilInventoryTitle">Inventory</string>
-	<string name="AccueilInventorySummaryOn">Click to disable inventory</string>
-	<string name="AccueilInventorySummaryOff">Click to enable inventory</string>
+	<string name="AccueilInventorySummaryOn">Disable inventory</string>
+	<string name="AccueilInventorySummaryOff">Enable inventory</string>
 	<string name="AccueilInventoryRun">Run inventory now</string>
-	<string name="AccueilInventoryRunSummary">Run now</string>
+	<string name="AccueilInventoryRunSummary">Send inventory report</string>
 	<string name="AccueilInventoryParam">Inventory parameters</string>
-	<string name="AccueilInventoryParamSummary">Inventory frequencies</string>
+	<string name="AccueilInventoryParamSummary">Schedule the inventory task</string>
 
 	<!-- Remote view part -->
 
@@ -130,11 +131,11 @@
 
 	<string name="GlobalCat">Global</string>
 	<string name="GlobalBoot">Boot options</string>
-	<string name="GlobalBootSummaryOn">Click to disable automatic boot</string>
-	<string name="GlobalBootSummaryOff">Click to enable automatic boot</string>
+	<string name="GlobalBootSummaryOn">Startup from system boot</string>
+	<string name="GlobalBootSummaryOff">Startup from system boot</string>
 	<string name="GlobalNotif">Notifications</string>
-	<string name="GlobalNotifSummaryOn">Click to disable notifications</string>
-	<string name="GlobalNotifSummaryOff">Click to enable notifications</string>
+	<string name="GlobalNotifSummaryOn">Disable toast notifications</string>
+	<string name="GlobalNotifSummaryOff">Enable toast notifications</string>
 	<string name="GlobalCatSet">Server settings</string>
 	<string name="GlobalServer">Server address</string>
 	<string name="GlobalServerSummary">Define server address</string>
@@ -148,8 +149,8 @@
 
 	<string name="InventoryCat">Inventory</string>
 	<string name="InventoryAuto">Automatic inventory</string>
-	<string name="InventoryAutoSummaryOn">Click to disable automatic inventory</string>
-	<string name="InventoryAutoSummaryOff">Click to enable automatic inventory</string>
+	<string name="InventoryAutoSummaryOn">Disable automatic inventory</string>
+	<string name="InventoryAutoSummaryOff">Enable automatic inventory</string>
 	<string name="InventoryFrequency">Frequency</string>
 	<string name="InventoryFrequencyDialog">Every :</string>
 	<string name="InventoryFrequencySummary">Define frequency</string>
