--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,14 @@
 		<item>Month</item>
 	</string-array>
 
+	<!--Error Message-->
+
+	<string name="error_url_is_malformed">Inventory server url is malformed, please check it</string>
+	<string name="error_url_is_not_found">Server address is not found, please check it</string>
+	<string name="error_protocol">Protocol exception, please check your url</string>
+	<string name="error_server_not_response">Server doesn\'t reply, please check your url</string>
+	<string name="error_send_fail">Can\'t send the inventory, please check your connection</string>
+
 	<!--About-->
 
 	<string name="AboutTitle">About</string>
