--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
 	<string name="tag">Tag</string>
 	<string name="tagSummary">Custom asset tag</string>
 	<string name="week">Week</string>
+	<string name="snackButton">Done</string>
 	<string-array name="Time">
 		<item>day</item>
 		<item>week</item>
