feat(inventory): add progress dialog running inventory

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
 	<string name="tagSummary">Custom asset tag</string>
 	<string name="week">Week</string>
 	<string name="snackButton">Done</string>
+	<string name="loading">Processing...</string>
 	<string-array name="Time">
 		<item>day</item>
 		<item>week</item>
