refactor(show): add inventory data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,8 @@
 	<string name="AccueilInventoryRunSummary">Send inventory report</string>
 	<string name="AccueilInventoryParam">Inventory parameters</string>
 	<string name="AccueilInventoryParamSummary">Schedule the inventory task</string>
+	<string name="AccueilInventoryShow">Show my inventory</string>
+	<string name="AccueilInventoryShowSummary">Display inventory report</string>
 
 	<!-- Remote view part -->
 
