--- a/_posts/2017-10-06-october-2017.md
+++ b/_posts/2017-10-06-october-2017.md
@@ -44,7 +44,7 @@ The Inventory Agent can send to:
 - OCSInventory NG (ocsng) 1.3.x and 2.x
 - Mandriva Pulse2
 
-![](https://i.imgur.com/gSipgR0.jpg =500x900)
+<img src="https://i.imgur.com/gSipgR0.jpg" alt="Define server address" width="485" height="850">
 
 
 ### Privacy options
@@ -65,28 +65,28 @@ The Inventory Agent allows you to run the inventory manually from the main scree
 
 You can also uncheck the Inventory option to disable the inventory.
 
-![](https://i.imgur.com/JP4xnSh.png =500x900)
+<img src="https://i.imgur.com/JP4xnSh.png" alt="Run inventory now" width="485" height="850">
 
 
 ### Automatize your Inventory
 
 Inventory Agent provides you the option to automatize your inventory generation, you can decide how your inventory will be run if manually or automatically, and the frequency it will have.
 
-![](https://i.imgur.com/eh1jv4B.png =500x900)
+<img src="https://i.imgur.com/eh1jv4B.png" alt="Automatic inventory" width="485" height="850">
 
 
 ### Show my inventory
 
 You can take a look at the information gathered in your inventory before it is sent. This way you will know exactly what are the elements of your device.
 
-![](https://i.imgur.com/wb7DYPn.png =500x900)
+<img src="https://i.imgur.com/wb7DYPn.png" alt="My device inventory" width="485" height="850">
 
 
 ### Share the inventory
 
 You also have the option of sharing your inventory and have it available whenever and wherever you need it, you have the option to share in two formats JSON and XML, as you prefer it.
 
-![](https://i.imgur.com/KQriJYz.png =500x900)
+<img src="https://i.imgur.com/KQriJYz.png" alt="Select the format to share" width="485" height="850">
 
 
 ### Exclusive Library
