docs(post): update article

--- a/_posts/2017-10-06-october-2017.md
+++ b/_posts/2017-10-06-october-2017.md
@@ -2,7 +2,7 @@
 layout: post
 category: blog
 published: false
-title: October 2017
+title: November 2017
 ---
 Welcome to the release version 1.0 of Flyve MDM Android Inventory Agent!
 
@@ -57,7 +57,7 @@ This allows to send a crash report using Bugsnag, helping us to monitor errors i
 
 #### Usage Data
 
-You can decide if your inventory is anonymously send to Flyve MDM.
+You can decide if your inventory is anonymously send to Flyve MDM, also part of our Quality Control.
 
 ### Run your inventory
 
