docs(post): organize by categories
Signed-off-by: Naylin <nmedina@teclib.com>

--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -5,6 +5,7 @@ published: true
 title: How to use
 permalink: howtos/how-to-use
 description: Easy and intuitive
+category: user
 ---
 
 The Android Inventory Agent features a complete inventory of your Android devices where both hardware and software information is collected.
