--- a/_posts/static/2018-01-04-use-cases.md
+++ b/_posts/static/2018-01-04-use-cases.md
@@ -5,6 +5,8 @@ published: true
 title: Use Cases
 permalink: howtos/use-cases
 description: What you should know
+category: user
+date: 2017-10-04
 ---
 # Flyve MDM Inventory Agent
 
