--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -2,36 +2,49 @@
 layout: post
 howtos: true
 published: true
-title: How to use
+title: Getting Started
 permalink: howtos/how-to-use
-description: Easy and intuitive
+description: Welcome to Flyve MDM!
 category: user
 ---
 
+## Welcome to Flyve MDM!
+
+Here we'll be explaining everything you need to know to start using your Inventory Agent.
+
 The Android Inventory Agent features a complete inventory of your Android devices where both hardware and software information is collected.
 
-Inventory Agent is running on Android 1.6 and higher.
+You will be able to view and share your inventory in a JSON or XML file format.
 
-After you [Install the app](http://flyve.org/android-inventory-agent/), you must define the server address and credentials where the inventory will be sent in the Global Settings section.
+## Index
+
+* [Server configuration]()
+* [Run my inventory]()
+* [Show & Share my inventory]()
+* []()
+* []()
+
+<a name=""></a>
+
+## 1. Server configuration
+
+After you [install the app](http://flyve.org/android-inventory-agent/howtos/installation), you must define the server address and credentials where the inventory will be sent in the Global Settings section.
+
+<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/android%20settings.png" alt="Global Settings" height="600">
 
 Also you will find the Privacy options, where you can decide what information will be sent between these two options Health Reports and Usage Data.
 
-<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/android%20settings.png" alt="Global Settings" height="800">
 
-Inventory Agent can also send inventory to:
 
-* Inventory for GLPI 2.3.x and higher
-* OCSInventory NG (ocsng) 1.3.x and 2.x
-* Mandriva Pulse2
-
+---------
 To get the inventory tap in Run inventory now from the main screen, and it will automatically send the inventory report to your server address.
 
-<img src="https://i.imgur.com/JP4xnSh.png" alt="Run inventory now" height="800">
+<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/main.png" alt="Run inventory now" height="600">
 
 Also you can see your Inventory before sending it with Show my inventory, from there you will be able to share it in an XML or JSON format through email, bluetooth, etc.
 
-<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/AIA.gif" alt="Show/share my inventory" height="800">
+<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/AIA.gif" alt="Show/share my inventory" height="600">
 
 With the Inventory parameters you can automatize the inventory generation, here you'll decide how your inventory will be run if manually or automatically, and the frequency it will have.
 
-<img src="https://i.imgur.com/eh1jv4B.png" alt="Automatic inventory" height="800">
+<img src="https://github.com/Naylin15/Screenshots/blob/master/A-I-A/frequency.png?raw=true" alt="Automatic inventory" height="600">
