docs(post): improve documentation
fix index in how to use article
update links
improve general redaction

Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -18,15 +18,12 @@ You will be able to view and share your inventory in a JSON or XML file format.
 
 ## Index
 
-* [Server configuration]()
-* [Run my inventory]()
-* [Show & Share my inventory]()
-* []()
-* []()
+* [Server configuration](#1)
+* [Run my inventory](#2)
+* [Show & Share my inventory](#3)
+* [Automatize my inventory](#4)
 
-<a name=""></a>
-
-## 1. Server configuration
+## <a name="1"></a>1. Server configuration
 
 After you [install the app](http://flyve.org/android-inventory-agent/howtos/installation), you must define the server address and credentials where the inventory will be sent in the Global Settings section.
 
@@ -34,16 +31,19 @@ After you [install the app](http://flyve.org/android-inventory-agent/howtos/inst
 
 Also you will find the Privacy options, where you can decide what information will be sent between these two options Health Reports and Usage Data.
 
+## <a name="2"></a>2. Run my inventory
 
-
----------
 To get the inventory tap in Run inventory now from the main screen, and it will automatically send the inventory report to your server address.
 
 <img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/main.png" alt="Run inventory now" height="600">
 
-Also you can see your Inventory before sending it with Show my inventory, from there you will be able to share it in an XML or JSON format through email, bluetooth, etc.
+## <a name="3"></a>3. Show & Share my inventory
+
+If the Inventory is Enabled, you will be able to see your inventory with Show my inventory and share it either in a XML or JSON format through email, bluetooth, etc.
 
 <img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/AIA.gif" alt="Show/share my inventory" height="600">
+
+## <a name="4"></a>4. Automatize inventory
 
 With the Inventory parameters you can automatize the inventory generation, here you'll decide how your inventory will be run if manually or automatically, and the frequency it will have.
 
