docs(post): update images
Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -27,7 +27,7 @@ You will be able to view and share your inventory in a JSON or XML file format.
 
 After you [install the app](http://flyve.org/android-inventory-agent/howtos/installation), you must define the server address and credentials where the inventory will be sent in the Global Settings section.
 
-<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/android%20settings.png" alt="Global Settings" height="600">
+<img src="https://git.io/fNcfK" alt="Global Settings" height="600">
 
 Also you will find the Privacy options, where you can decide what information will be sent between these two options Health Reports and Usage Data.
 
@@ -35,16 +35,16 @@ Also you will find the Privacy options, where you can decide what information wi
 
 To get the inventory tap in Run inventory now from the main screen, and it will automatically send the inventory report to your server address.
 
-<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/main.png" alt="Run inventory now" height="600">
+<img src="https://git.io/fNcfC" alt="Run inventory now" height="600">
 
 ## <a name="3"></a>3. Show & Share my inventory
 
 If the Inventory is Enabled, you will be able to see your inventory with Show my inventory and share it either in a XML or JSON format through email, bluetooth, etc.
 
-<img src="https://raw.githubusercontent.com/Naylin15/Screenshots/master/A-I-A/AIA.gif" alt="Show/share my inventory" height="600">
+<img src="https://git.io/fNcJh" alt="Show/share my inventory" height="600">
 
 ## <a name="4"></a>4. Automatize inventory
 
 With the Inventory parameters you can automatize the inventory generation, here you'll decide how your inventory will be run if manually or automatically, and the frequency it will have.
 
-<img src="https://github.com/Naylin15/Screenshots/blob/master/A-I-A/frequency.png?raw=true" alt="Automatic inventory" height="600">
+<img src="https://git.io/fNcUv" alt="Automatic inventory" height="600">
