docs(post): change url for images
Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/_posts/static/2018-01-04-use-cases.md
+++ b/_posts/static/2018-01-04-use-cases.md
@@ -26,7 +26,7 @@ The inventory can be send to:
 
 An user can automatize both the inventory generation and sending, weekly, daily or monthly according to its own needs.
 
-<img src="https://git.io/fNcUv" alt="Frequency" height="550">
+<img src="{{ 'images/screenshots/automatic.png' | absolute_url }}" alt="Frequency" height="550">
 
 The Inventory Agent will restart its service to follow the new configuration.
 
@@ -34,7 +34,7 @@ The Inventory Agent will restart its service to follow the new configuration.
 
 Only when the Inventory is enabled, the user will be able to display the inventory of the device, and also have the option to share it in two formats JSON or XML by email, bluetooth, etc.
 
-<img src="https://git.io/fNcJh" alt="Show & Share my inventory" height="550">
+<img src="{{ 'images/screenshots/show-share.gif' | absolute_url }}" alt="Show & Share my inventory" height="550">
 
 ## 3. Privacy Options
 
